--- a/result.css
+++ b/result.css
@@ -1,127 +1,186 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;   
-    font-family: 'Source Code Pro', monospace;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Source Code Pro", monospace;
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url("images/fundo.png");
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    width: 100vw;
-    height: 100vh;
-    overflow-x: hidden;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-image: url("images/fundo.png");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  min-height: 600px;
+  width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
 }
 
 .header {
-    display: flex;
-}
-
-.header img {
-    position: fixed;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    min-width: 900px; 
-    height: 100vh;
-}
-
-.resultado {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr ;
-
-    column-gap: 20px;
-
-    text-align: center;
-    align-items: center;
-
-    position: relative;
-    height: 50%;
-    width: 50%;
-    min-height: 200px;
-    max-height: 250px;
-    
-    z-index: 2;
-}
-
-.resultado h1 {
-    display: grid;
-    grid-column: span 2;
-    color: #ffffff;
-    -webkit-text-stroke-width: .6px; 
-    -webkit-text-stroke-color: #000;
-    font-size: clamp(2.2em, 2vw, 2.5em);
-}
-
-.resultado div {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-}
-
-.resultado div h2 {
-    font-weight: 500;
-    font-size: clamp(1em, 2vw, 1.2em);
-}
-
-.containerBarra {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.containerBarra span {
-    display: block;
-    content: " ";
-    width: 100%;
-    min-height: 18px;
-    height: 3vh;
-    max-height: 40px;
-    border-radius: 10px;
-    border: dashed 1.7px #000000;
-}
-
-.containerBarra:nth-child(1) span {
-    background: radial-gradient(#ffd700, #ffb309, #ffed00);
-    
-}
-
-.containerBarra:nth-child(2) span {
-    background: radial-gradient(#ffffff, #b7b6b4);
-    
-}
-
-.containerBarra:nth-child(3) span {
-    background: linear-gradient(180deg, #a15809, #eea44c);
-    
-}
-
-.footer {
-    display: flex;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    height: calc(100vh / 5.5);
-    width: 100%;
-    justify-content: space-between;
-    margin-bottom: -7px;
-}
-
-.footer img {
-    height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: calc(100vw / 7);
+  min-height: 100px;
+  overflow-x: hidden;
 }
 
 .bandeiras {
-    position: absolute;
-    top: 0;
-    left: 0;
+  width: auto;
+  height: 100%;
+}
+
+.resultado {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, auto);
+  column-gap: 20px;
+  text-align: center;
+  align-items: center;
+  position: relative;
+  height: 50%;
+  width: 100%;
+  min-height: 200px;
+  max-height: 250px;
+  max-width: 800px;
+  min-width: 300px;
+  padding: 0 30px;
+}
+
+.resultado h1 {
+  display: grid;
+  grid-column: span 2;
+  color: #ffffff;
+  -webkit-text-stroke-width: 0.6px;
+  -webkit-text-stroke-color: #000;
+  font-size: clamp(2.2em, 2vw, 2.5em);
+}
+
+.resultado div {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.resultado div h2 {
+  font-weight: 500;
+  font-size: clamp(1em, 2vw, 1.2em);
+}
+
+.division {
+  display: none;
+}
+
+.containerBarra {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.containerBarra span {
+  display: block;
+  content: " ";
+  width: 100%;
+  min-height: 18px;
+  height: 3vh;
+  max-height: 40px;
+  border-radius: 10px;
+  border: dashed 1.7px #000000;
+}
+
+.containerBarra:nth-child(1) span {
+  background: radial-gradient(#ffd700, #ffb309, #ffed00);
+}
+
+.containerBarra:nth-child(2) span {
+  background: radial-gradient(#ffffff, #b7b6b4);
+}
+
+.containerBarra:nth-child(3) span {
+  background: linear-gradient(180deg, #a15809, #eea44c);
+}
+
+.footer {
+  display: flex;
+  padding: 0 30px 2px 30px;
+  height: calc(100vw / 9);
+  min-height: 100px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: 40px;
+}
+
+.footer img {
+  height: 100%;
+}
+
+.footer img:last-child {
+  height: 170%;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    justify-content: space-evenly;
+    gap: 50px;
+    margin-top: 60px;
+  }
+
+  .footer img:nth-child(2) {
+    height: 170%;
+  }
+
+  .footer img:nth-child(1) {
+    display: none;
+  }
+}
+
+@media (max-width: 500px) {
+  body {
+    min-height: 700px;
+  }
+
+  .resultado {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
+    min-height: auto;
+    max-height: none;
+    height: auto;
+  }
+
+  .division {
+    display: block;
+    content: " ";
+    background-color: #00000033;
+    border-radius: 5px;
+    height: 3px;
+    margin: 22px 0 15px 0;
+  }
+
+  .footer {
+    height: 200px;
+    justify-content: flex-end;
+    padding: 10px 40px;
+    margin-top: 0;
+  }
+
+  .footer img {
+    display: none;
+  }
+
+  .footer img:last-child {
+    display: block;
+    margin-right: -20px;
+    height: 100%;
+  }
 }
